--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <h4>📞:54942408/54942409</h4>
         </div>
         <div class="menu">
-          <a href="https://facebook.com" target="_blank">📘</a>
-          <a href="https://instagram.com" target="_blank">📸</a>
+          <a href="https://facebook.com" target="_blank">facebook</a>
+          <a href="https://instagram.com" target="_blank">instagram</a>
         </div>
       </nav></header>
     
