--- a/puff.html
+++ b/puff.html
@@ -1,30 +1,204 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>puff</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./liquide.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+
+    <script
+      src="https://kit.fontawesome.com/1315f09d2e.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <nav class="navbar">
-        <div class="logo">
-          <img src="./img/logo_vape.jpg" alt="Logo Vape Store" />
-          <h1>Vape Store</h1>
+      <div class="logo">
+        <img src="./img/logo_vape.jpg" alt="Logo Vape Store" />
+        <h1>Vape Store</h1>
+      </div>
+      <div class="menu">
+        <a href="./index.html#accueil">Accueil</a>
+        <a href="./index.html#produits">Produits</a>
+        <a href="./index.html#contact">Contact</a>
+      </div>
+    </nav>
+    <nav class="nav2">
+      <div>
+        <h4>📞:54942408/54942409</h4>
+      </div>
+      <div class="menu">
+        <a href="https://facebook.com" target="_blank">📘</a>
+        <a href="https://instagram.com" target="_blank">📸</a>
+      </div>
+    </nav>
+  
+  
+    <main>
+      <section class="shopping-card">
+        <div class="cards-container">
+          <!-- Product 1 -->
+          <div class="card" style="width: 15rem">
+            <img
+              src="./img/liquide photo/1.jpg"
+              alt="Image 1"
+              onclick="changeMainImage('./img/liquide photo/1.jpg')"
+            />
+            <div class="card-body">
+              <h5 class="card-title">xxx</h5>
+              <span class="unit-price"> 500 </span><span>$</span>
+            </div>
+            <div class="card-body">
+              <i class="fas fa-plus-circle plus-btn"></i>
+              <span class="qte"> 0 </span>
+              <i class="fas fa-minus-circle minus-btn"></i>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <i class="fas fa-trash-alt"></i>
+                <i class="fas fa-heart"></i>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Product 2 -->
+          <div class="card" style="width: 15rem">
+            <img
+              src="./img/liquide photo/1.jpg"
+              alt="Image 1"
+              onclick="changeMainImage('./img/liquide photo/1.jpg')"
+            />
+            <div class="card-body">
+              <h5 class="card-title">cccccc</h5>
+              <span class="unit-price">1000 </span><span>$</span>
+            </div>
+            <div class="card-body">
+              <i class="fas fa-plus-circle plus-btn"></i>
+              <span class="qte"> 0 </span>
+              <i class="fas fa-minus-circle minus-btn"></i>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <i class="fas fa-trash-alt"></i>
+                <i class="fas fa-heart"></i>
+              </li>
+              <li></li>
+            </ul>
+          </div>
+
+          <!-- Product 3 -->
+          <div class="card" style="width: 15rem">
+            <img
+              src="./img/liquide photo/1.jpg"
+              alt="Image 1"
+              onclick="changeMainImage('./img/liquide photo/1.jpg')"
+            />
+            <div class="card-body">
+              <h5 class="card-title">ccccc</h5>
+              <span class="unit-price">200 </span><span>$</span>
+            </div>
+            <div class="card-body">
+              <i class="fas fa-plus-circle plus-btn"></i>
+              <span class="qte">0</span>
+              <i class="fas fa-minus-circle minus-btn"></i>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <i class="fas fa-trash-alt"></i>
+                <i class="fas fa-heart"></i>
+              </li>
+              <li></li>
+            </ul>
+          </div>
         </div>
-        <div class="menu">
-          <a href="./index.html#accueil">Accueil</a>
-          <a href="./index.html#produits">Produits</a>
-          <a href="./index.html#contact">Contact</a>
+        <div class="cards-container">
+          <!-- Product 1 -->
+          <div class="card" style="width: 15rem">
+            <img
+              src="./img/liquide photo/1.jpg"
+              alt="Image 1"
+              onclick="changeMainImage('./img/liquide photo/1.jpg')"
+            />
+            <div class="card-body">
+              <h5 class="card-title">xxx</h5>
+              <span class="unit-price"> 500 </span><span>$</span>
+            </div>
+            <div class="card-body">
+              <i class="fas fa-plus-circle plus-btn"></i>
+              <span class="qte"> 0 </span>
+              <i class="fas fa-minus-circle minus-btn"></i>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <i class="fas fa-trash-alt"></i>
+                <i class="fas fa-heart"></i>
+              </li>
+            </ul>
+          </div>
+
+          <!-- Product 2 -->
+          <div class="card" style="width: 15rem">
+            <img
+              src="./img/liquide photo/1.jpg"
+              alt="Image 1"
+              onclick="changeMainImage('./img/liquide photo/1.jpg')"
+            />
+            <div class="card-body">
+              <h5 class="card-title">cccccc</h5>
+              <span class="unit-price">1000 </span><span>$</span>
+            </div>
+            <div class="card-body">
+              <i class="fas fa-plus-circle plus-btn"></i>
+              <span class="qte"> 0 </span>
+              <i class="fas fa-minus-circle minus-btn"></i>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <i class="fas fa-trash-alt"></i>
+                <i class="fas fa-heart"></i>
+              </li>
+              <li></li>
+            </ul>
+          </div>
+
+          <!-- Product 3 -->
+          <div class="card" style="width: 15rem">
+            <img
+              src="./img/liquide photo/1.jpg"
+              alt="Image 1"
+              onclick="changeMainImage('./img/liquide photo/1.jpg')"
+            />
+            <div class="card-body">
+              <h5 class="card-title">ccccc</h5>
+              <span class="unit-price">200 </span><span>$</span>
+            </div>
+            <div class="card-body">
+              <i class="fas fa-plus-circle plus-btn"></i>
+              <span class="qte">0</span>
+              <i class="fas fa-minus-circle minus-btn"></i>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <i class="fas fa-trash-alt"></i>
+                <i class="fas fa-heart"></i>
+              </li>
+              <li></li>
+            </ul>
+          </div>
         </div>
-      </nav>
-      <nav class="nav2">
-        <div>
-          <h4>📞:54942408/54942409</h4>
+        <div class="total-price-container">
+          <span>Total Price :</span>
+          <span id="total"> 0 </span>
+          <span>$</span>
         </div>
-        <div class="menu">
-          <a href="https://facebook.com" target="_blank">📘</a>
-          <a href="https://instagram.com" target="_blank">📸</a>
-        </div>
-      </nav>
-</body>
+      </section>
+      <script src="./src.js"></script>
+    </main>
+  </body>
 </html>
