--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vape store</title>
     <link rel="stylesheet" href="./style.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   </head>
   <body>
     <header id ="g">
@@ -23,8 +24,10 @@
           <h4>📞:54942408/54942409</h4>
         </div>
         <div class="menu">
-          <a href="https://facebook.com" target="_blank">facebook</a>
-          <a href="https://instagram.com" target="_blank">instagram</a>
+          <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i>
+          </a>
         </div>
       </nav></header>
     
