--- a/liquide.html
+++ b/liquide.html
@@ -11,7 +11,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/1315f09d2e.js"
       crossorigin="anonymous"
@@ -34,8 +34,10 @@
           <h4>📞:54942408/54942409</h4>
         </div>
         <div class="menu">
-          <a href="https://facebook.com" target="_blank">📘</a>
-          <a href="https://instagram.com" target="_blank">📸</a>
+          <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i>
+          </a>
         </div>
       </nav>
       <main>
@@ -43,7 +45,7 @@
           <div class="cards-container" >
             <!-- Product 1 -->
             <div class="card" style="width: 15rem" >
-              <img src="./img/liquide photo/1.jpg" alt="Image 1" onclick="changeMainImage('./img/liquide photo/1.jpg')" />
+              <img src="./img/liquide photo/1.jpg" alt="Image 1"/>
               <div class="card-body">
                 <h5 class="card-title">xxx</h5>
                 <span class="unit-price"  > 500 </span><span>$</span>
@@ -63,7 +65,7 @@
   
             <!-- Product 2 -->
             <div class="card" style="width: 15rem" >
-              <img src="./img/liquide photo/1.jpg" alt="Image 1" onclick="changeMainImage('./img/liquide photo/1.jpg')" />
+              <img src="./img/liquide photo/1.jpg" alt="Image 1"  />
               <div class="card-body">
                 <h5 class="card-title">cccccc</h5>
                 <span class="unit-price">1000 </span><span>$</span>
@@ -84,7 +86,7 @@
   
             <!-- Product 3 -->
             <div class="card" style="width: 15rem"  >
-              <img src="./img/liquide photo/1.jpg" alt="Image 1" onclick="changeMainImage('./img/liquide photo/1.jpg')" />
+              <img src="./img/liquide photo/1.jpg" alt="Image 1" />
               <div class="card-body">
                 <h5 class="card-title">ccccc</h5>
                 <span class="unit-price" >200 </span><span>$</span>
@@ -106,7 +108,7 @@
           <div class="cards-container" >
             <!-- Product 1 -->
             <div class="card" style="width: 15rem" >
-              <img src="./img/liquide photo/1.jpg" alt="Image 1" onclick="changeMainImage('./img/liquide photo/1.jpg')" />
+              <img src="./img/liquide photo/1.jpg" alt="Image 1" />
               <div class="card-body">
                 <h5 class="card-title">xxx</h5>
                 <span class="unit-price"  > 500 </span><span>$</span>
@@ -126,7 +128,7 @@
   
             <!-- Product 2 -->
             <div class="card" style="width: 15rem" >
-              <img src="./img/liquide photo/1.jpg" alt="Image 1" onclick="changeMainImage('./img/liquide photo/1.jpg')" />
+              <img src="./img/liquide photo/1.jpg" alt="Image 1"  />
               <div class="card-body">
                 <h5 class="card-title">cccccc</h5>
                 <span class="unit-price">1000 </span><span>$</span>
@@ -147,7 +149,7 @@
   
             <!-- Product 3 -->
             <div class="card" style="width: 15rem"  >
-              <img src="./img/liquide photo/1.jpg" alt="Image 1" onclick="changeMainImage('./img/liquide photo/1.jpg')" />
+              <img src="./img/liquide photo/1.jpg" alt="Image 1"  />
               <div class="card-body">
                 <h5 class="card-title">ccccc</h5>
                 <span class="unit-price" >200 </span><span>$</span>
