--- a/wotofo.html
+++ b/wotofo.html
@@ -44,10 +44,10 @@
   
     <main>
       <section class="shopping-card">
-        <h2 id="titre">wotofo 8k</h2>
+        <h2 id="wot">wotofo 8k</h2>
         <div class="cards-container">
           <!-- Product 1 -->
-          <div class="card" style="width: 15rem"  id="watermelon_ice">
+          <div class="card" style="width: 15rem"  id="q">
             <img
               src="./img/wotofo/1.jpg"
               alt="Image 1"
@@ -71,7 +71,7 @@
           </div>
 
           <!-- Product 2 -->
-          <div class="card" style="width: 15rem"  id="vanicreme_tobacco">
+          <div class="card" style="width: 15rem"  id="s">
             <img
             src="./img/wotofo/2.jpg"
             alt="Image 1"
@@ -96,7 +96,7 @@
           </div>
 
           <!-- Product 3 -->
-          <div class="card" style="width: 15rem"  id="peach_mango">
+          <div class="card" style="width: 15rem"  id="d">
             <img
               src="./img/wotofo/3.jpg"
               alt="Image 1"
@@ -122,7 +122,7 @@
         </div>
         <div class="cards-container">
           <!-- Product 4 -->
-          <div class="card" style="width: 15rem"  id="dargon_fruite__bannane_cherry">
+          <div class="card" style="width: 15rem"  id="f">
             <img
               src="./img/wotofo/4.jpg"
               alt="Image 1"
@@ -146,7 +146,7 @@
           </div>
 
           <!-- Product 5 -->
-          <div class="card" style="width: 15rem"  id="miami_mint">
+          <div class="card" style="width: 15rem"  id="g">
             <img
             src="./img/wotofo/5.jpg"
             alt="Image 1"
@@ -171,7 +171,7 @@
           </div>
 
           <!-- Product 6 -->
-          <div class="card" style="width: 15rem"  id="grape_ice">
+          <div class="card" style="width: 15rem"  id="h">
             <img
             src="./img/wotofo/6.jpg"
             alt="Image 1"
@@ -203,7 +203,7 @@
           <button id="acheter-btn" onclick="redirectToForm()">Acheter</button>
         </div>
       </section>
-      <script src="./src.js"></script>
+      <!-- <script src="./src"></script> -->
     </main>
   </body>
 </html>
