--- a/elfworld.html
+++ b/elfworld.html
@@ -44,10 +44,10 @@
   
     <main>
       <section class="shopping-card">
-        <h2 id="t">elfworld 22k</h2>
+        <h2 class="titre">elfworld 22k</h2>
         <div class="cards-container">
           <!-- Product 1 -->
-          <div class="card" style="width: 15rem"  id="w">
+          <div class="card" style="width: 15rem"  id="elfworld1">
             <img
               src="./img/elfworld/1.webp"
               alt="Image 1"
@@ -71,7 +71,7 @@
           </div>
 
           <!-- Product 2 -->
-          <div class="card" style="width: 15rem"  id="x">
+          <div class="card" style="width: 15rem"  id="elfworld2">
             <img
             src="./img/elfworld/2.jpg"
             alt="Image 1"
@@ -96,7 +96,7 @@
           </div>
 
           <!-- Product 3 -->
-          <div class="card" style="width: 15rem"  id="c">
+          <div class="card" style="width: 15rem"  id="elfworld3">
             <img
               src="./img/elfworld/3.jpg"
               alt="Image 1"
@@ -122,7 +122,7 @@
         </div>
         <div class="cards-container">
           <!-- Product 4 -->
-          <div class="card" style="width: 15rem"  id="v">
+          <div class="card" style="width: 15rem"  id="elfworld4">
             <img
               src="./img/elfworld/4.jpg"
               alt="Image 1"
@@ -146,7 +146,7 @@
           </div>
 
           <!-- Product 5 -->
-          <div class="card" style="width: 15rem"  id="b">
+          <div class="card" style="width: 15rem"  id="elfworld5">
             <img
             src="./img/elfworld/5.jpg"
             alt="Image 1"
@@ -171,7 +171,7 @@
           </div>
 
           <!-- Product 6 -->
-          <div class="card" style="width: 15rem"  id="n">
+          <div class="card" style="width: 15rem"  id="elfworld6">
             <img
             src="./img/elfworld/6.jpg"
             alt="Image 1"
@@ -203,7 +203,8 @@
           <button id="acheter-btn" onclick="redirectToForm()">Acheter</button>
         </div>
       </section>
-      <!-- <script src="./src.js"></script> -->
+      <script src="./src.js"></script>
+      <script src="./acheter.js"></script>
     </main>
   </body>
 </html>
