--- a/formulaire.html
+++ b/formulaire.html
@@ -59,7 +59,6 @@
       const prenom = document.getElementById("prenom").value;
       const telephone = document.getElementById("telephone").value;
       const adresse = document.getElementById("adresse").value;
-      const titre = document.getElementById("form-title").value;
       // Vérifier si tous les champs sont remplis
       if (!nom || !prenom || !telephone || !adresse ) {
         alert("Veuillez remplir tous les champs.");
@@ -67,7 +66,7 @@
       }
 
       // Préparer le message WhatsApp
-      let message = `Nom : ${nom}\nPrénom : ${prenom}\nTéléphone : ${telephone}\n ${titre}\n\nAdresse : ${adresse}\n\nProduits sélectionnés :\n`;
+      let message = `Nom : ${nom}\nPrénom : ${prenom}\nTéléphone : ${telephone}\n\nAdresse : ${adresse}\n\nProduits sélectionnés :\n`;
 
       if (selectedProducts && selectedProducts.length > 0) {
         selectedProducts.forEach((product) => {
@@ -86,16 +85,6 @@
       window.open(whatsappUrl, "_blank");
     });
 
-
-//   // Récupérer le titre depuis localStorage
-//   const titre = localStorage.getItem("titre");
-
-// // Vérifier si le titre existe et l'afficher
-// if (titre) {
-//   document.getElementById("form-title").textContent = titre;
-// } else {
-//   document.getElementById("form-title").textContent = "Titre non disponible";
-// }
 
   </script>
 </body>
