--- a/nexpod.html
+++ b/nexpod.html
@@ -44,10 +44,10 @@
   
     <main>
       <section class="shopping-card">
-        <h2 id="next">nexpod 5k</h2>
+        <h2 class="titre">nexpod 5k</h2>
         <div class="cards-container">
           <!-- Product 1 -->
-          <div class="card" style="width: 15rem"  id="a">
+          <div class="card" style="width: 15rem"  id="nexpod1">
             <img
               src="./img/nexpod/1.jpg"
               alt="Image 1"
@@ -71,7 +71,7 @@
           </div>
 
           <!-- Product 2 -->
-          <div class="card" style="width: 15rem"  id="z">
+          <div class="card" style="width: 15rem"  id="nexpod2">
             <img
             src="./img/nexpod/2.jpg"
             alt="Image 1"
@@ -96,7 +96,7 @@
           </div>
 
           <!-- Product 3 -->
-          <div class="card" style="width: 15rem"  id="e">
+          <div class="card" style="width: 15rem"  id="nexpod3">
             <img
               src="./img/nexpod/3.jpg"
               alt="Image 1"
@@ -122,7 +122,7 @@
         </div>
         <div class="cards-container">
           <!-- Product 4 -->
-          <div class="card" style="width: 15rem"  id="r">
+          <div class="card" style="width: 15rem"  id="nexpod4">
             <img
               src="./img/nexpod/4.jpg"
               alt="Image 1"
@@ -146,7 +146,7 @@
           </div>
 
           <!-- Product 5 -->
-          <div class="card" style="width: 15rem"  id="t">
+          <div class="card" style="width: 15rem"  id="nexpod5">
             <img
             src="./img/nexpod/5.jpg"
             alt="Image 1"
@@ -171,7 +171,7 @@
           </div>
 
           <!-- Product 6 -->
-          <div class="card" style="width: 15rem"  id="y">
+          <div class="card" style="width: 15rem"  id="nexpod6">
             <img
             src="./img/nexpod/6.jpg"
             alt="Image 1"
@@ -197,7 +197,7 @@
         </div>
         <div class="cards-container">
           <!-- Product 7 -->
-          <div class="card" style="width: 15rem"  id="u">
+          <div class="card" style="width: 15rem"  id="nexpod7">
             <img
               src="./img/nexpod/7.jpg"
               alt="Image 1"
@@ -221,7 +221,7 @@
           </div>
 
           <!-- Product 8 -->
-          <div class="card" style="width: 15rem"  id="o">
+          <div class="card" style="width: 15rem"  id="nexpod8">
             <img
             src="./img/nexpod/8.jpg"
             alt="Image 1"
@@ -246,7 +246,7 @@
           </div>
 
           <!-- Product 9 -->
-          <div class="card" style="width: 15rem" id="p">
+          <div class="card" style="width: 15rem" id="nexpod9">
             <img
             src="./img/nexpod/9.jpg"
             alt="Image 1"
@@ -277,7 +277,8 @@
           <button id="acheter-btn" onclick="redirectToForm()">Acheter</button>
         </div>
       </section>
-      <!-- <script src="./src.js"></script> -->
+      <script src="./src.js"></script>
+      <script src="./acheter.js"></script>
     </main>
   </body>
 </html>
