--- a/puff.html
+++ b/puff.html
@@ -44,7 +44,7 @@
   
     <main>
       <section class="shopping-card">
-        <h2 id="titre">vozol 20k</h2>
+        <h2 class="titre">vozol 20k</h2>
         <div class="cards-container">
           <!-- Product 1 -->
           <div class="card" style="width: 15rem"  id="watermelon_ice">
@@ -278,6 +278,7 @@
         </div>
       </section>
       <script src="./src.js"></script>
+      <script src="./acheter.js"></script>
     </main>
   </body>
 </html>
