--- a/nexbar.html
+++ b/nexbar.html
@@ -44,10 +44,10 @@
   
     <main>
       <section class="shopping-card">
-        <h2 id="ti">nexbar 20k</h2>
+        <h2 class="titre">nexbar 20k</h2>
         <div class="cards-container">
           <!-- Product 1 -->
-          <div class="card" style="width: 15rem"  id="cc">
+          <div class="card" style="width: 15rem"  id="nexbar1">
             <img
               src="./img/nexbar/1.png"
               alt="Image 1"
@@ -71,7 +71,7 @@
           </div>
 
           <!-- Product 2 -->
-          <div class="card" style="width: 15rem"  id="aa">
+          <div class="card" style="width: 15rem"  id="nexbar2">
             <img
             src="./img/nexbar/2.png"
             alt="Image 1"
@@ -96,7 +96,7 @@
           </div>
 
           <!-- Product 3 -->
-          <div class="card" style="width: 15rem"  id="zz">
+          <div class="card" style="width: 15rem"  id="nexbar3">
             <img
               src="./img/nexbar/3.jpg"
               alt="Image 1"
@@ -122,7 +122,7 @@
         </div>
         <div class="cards-container">
           <!-- Product 4 -->
-          <div class="card" style="width: 15rem"  id="ee">
+          <div class="card" style="width: 15rem"  id="nexbar4">
             <img
               src="./img/nexbar/4.jpg"
               alt="Image 1"
@@ -146,7 +146,7 @@
           </div>
 
           <!-- Product 5 -->
-          <div class="card" style="width: 15rem"  id="rr">
+          <div class="card" style="width: 15rem"  id="nexbar5">
             <img
             src="./img/nexbar/5.png"
             alt="Image 1"
@@ -171,7 +171,7 @@
           </div>
 
           <!-- Product 6 -->
-          <div class="card" style="width: 15rem"  id="tt">
+          <div class="card" style="width: 15rem"  id="nexbar6">
             <img
             src="./img/nexbar/6.png"
             alt="Image 1"
@@ -197,7 +197,7 @@
         </div>
         <div class="cards-container">
           <!-- Product 7 -->
-          <div class="card" style="width: 15rem"  id="yy">
+          <div class="card" style="width: 15rem"  id="nexbar7">
             <img
               src="./img/nexbar/7.jpg"
               alt="Image 1"
@@ -221,7 +221,7 @@
           </div>
 
           <!-- Product 8 -->
-          <div class="card" style="width: 15rem"  id="uu">
+          <div class="card" style="width: 15rem"  id="nexbar8">
             <img
             src="./img/nexbar/8.jpg"
             alt="Image 1"
@@ -246,7 +246,7 @@
           </div>
 
           <!-- Product 9 -->
-          <div class="card" style="width: 15rem" id="ii">
+          <div class="card" style="width: 15rem" id="nexbar9">
             <img
             src="./img/nexbar/9.jpg"
             alt="Image 1"
@@ -277,7 +277,9 @@
           <button id="acheter-btn" onclick="redirectToForm()">Acheter</button>
         </div>
       </section>
-      <!-- <script src="./src.js"></script> -->
+      <script src="./src.js"></script>
+      <script src="./acheter.js"></script>
     </main>
+  
   </body>
 </html>
