--- a/formulaire.html
+++ b/formulaire.html
@@ -66,7 +66,7 @@
       }
 
       // Préparer le message WhatsApp
-      let message = `Nom : ${nom}\nPrénom : ${prenom}\nTéléphone : ${telephone}\n\nAdresse : ${adresse}\n\nProduits sélectionnés :\n`;
+      let message = `Nom : ${nom}\nPrénom : ${prenom}\nTéléphone : ${telephone}\nAdresse : ${adresse}\n\nProduits sélectionnés :\n`;
 
       if (selectedProducts && selectedProducts.length > 0) {
         selectedProducts.forEach((product) => {
