--- a/wotofo.html
+++ b/wotofo.html
@@ -48,10 +48,11 @@
         <h2 class="titre">wotofo 8k</h2>
         <div class="cards-container">
           <!-- Product 1 -->
-          <div class="card" style="width: 15rem" id="wotofo1">
+          <div class="card" style="width: 15rem" id="wotofo8k_watermelon ice">
             <img src="./img/wotofo/1.jpg" alt="Image 1" />
             <div class="card-body">
-              <span class="unit-price"> 45 </span><span><b>DT</b></span>
+              <b>watermelon ice</b> <br>
+              <span class="unit-price"> 30 </span><span><b>DT</b></span>
             </div>
             <div class="card-body">
               <i class="fas fa-plus-circle plus-btn"></i>
@@ -67,10 +68,11 @@
           </div>
 
           <!-- Product 2 -->
-          <div class="card" style="width: 15rem" id="wotofo2">
+          <div class="card" style="width: 15rem" id="wotofo8k_mango ice">
             <img src="./img/wotofo/2.jpg" alt="Image 1" />
             <div class="card-body">
-              <span class="unit-price">45 </span><span><b>DT</b></span>
+              <b>mango ice</b> <br>
+              <span class="unit-price">30 </span><span><b>DT</b></span>
             </div>
             <div class="card-body">
               <i class="fas fa-plus-circle plus-btn"></i>
@@ -87,10 +89,11 @@
           </div>
 
           <!-- Product 3 -->
-          <div class="card" style="width: 15rem" id="wotofo3">
+          <div class="card" style="width: 15rem" id="wotofo8k_strawberry yaourt">
             <img src="./img/wotofo/3.jpg" alt="Image 1" />
             <div class="card-body">
-              <span class="unit-price">45 </span><span><b>DT</b></span>
+              <b>strawberry yaourt</b> <br>
+              <span class="unit-price">30 </span><span><b>DT</b></span>
             </div>
             <div class="card-body">
               <i class="fas fa-plus-circle plus-btn"></i>
@@ -108,10 +111,11 @@
         </div>
         <div class="cards-container">
           <!-- Product 4 -->
-          <div class="card" style="width: 15rem" id="wotofo4">
+          <div class="card" style="width: 15rem" id="wotofo8k_purple razz ice">
             <img src="./img/wotofo/4.jpg" alt="Image 1" />
             <div class="card-body">
-              <span class="unit-price"> 45 </span><span><b>DT</b></span>
+              <b>purple razz ice</b> <br>
+              <span class="unit-price"> 30 </span><span><b>DT</b></span>
             </div>
             <div class="card-body">
               <i class="fas fa-plus-circle plus-btn"></i>
@@ -127,10 +131,11 @@
           </div>
 
           <!-- Product 5 -->
-          <div class="card" style="width: 15rem" id="wotofo5">
+          <div class="card" style="width: 15rem" id="wotofo8k_guava kiwi passiant fruit">
             <img src="./img/wotofo/5.jpg" alt="Image 1" />
             <div class="card-body">
-              <span class="unit-price">45 </span><span><b>DT</b></span>
+              <b>guava kiwi passiant fruit</b> <br>
+              <span class="unit-price">30 </span><span><b>DT</b></span>
             </div>
             <div class="card-body">
               <i class="fas fa-plus-circle plus-btn"></i>
@@ -147,10 +152,11 @@
           </div>
 
           <!-- Product 6 -->
-          <div class="card" style="width: 15rem" id="wotofo6">
+          <div class="card" style="width: 15rem" id="wotofo8k_tow apple">
             <img src="./img/wotofo/6.jpg" alt="Image 1" />
             <div class="card-body">
-              <span class="unit-price">45 </span><span><b>DT</b></span>
+              <b>tow apple</b> <br>
+              <span class="unit-price">30 </span><span><b>DT</b></span>
             </div>
             <div class="card-body">
               <i class="fas fa-plus-circle plus-btn"></i>
