--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h4>📞:47025199/47025199</h4>
         </div>
         <div class="menu">
-          <a href="https://www.facebook.com/?sk=welcome" target="_blank"><i class="fab fa-facebook-f"></i>
+          <a href="https://www.facebook.com/share/1E4NRAS85z/?mibextid=wwXIfr" target="_blank"><i class="fab fa-facebook-f"></i>
           </a>
           <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i>
           </a>
